# gh_to_fd

./: README.md  run_api_transfer.sh  setup.cfg
api_transfer/: __main__.py  app.py
api_transfer/resources/: config.json
api_transfer/tests/: test_all.py
api_transfer/utilities/: adaptor.py  freshdesk_handler.py  github_handler.py
