[metadata]
# replace with your username:
name = test_api_transfer
version = 0.0.1
author = PD
author_email = 
description = Test API handling package
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
